--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js",
+    "test-server": "node test-server.js",
     "build": "echo 'No build step required'",
     "test": "echo 'No tests specified'"
   },
