--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "form-data": "^4.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
