--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-fetch": "^2.7.0",
-    "form-data": "^4.0.0"
+    "express": "^4.18.2",
+    "form-data": "^4.0.5",
+    "node-fetch": "^2.7.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
